--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5001",
   "name": "myquiz-frontend",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "cogo-toast": "^4.2.3",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
@@ -51,6 +52,7 @@
     "node-env-run": "^3.0.2",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
-    "pino-colada": "^1.5.1"
+    "pino-colada": "^1.5.1",
+    "prettier": "^1.19.1"
   }
 }
